--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,14 +11,14 @@
 
     gtag('config', 'G-2E0012DK1M');
   </script>
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' Content Security Policy: https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/ ;"/>
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' Content Security Policy: https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/  http://www.trustlogo.com  https://www.positivessl.com https://secure.trust-provider.com;"/>
   <meta charset="utf-8" />
   <link rel="icon" href="/PNG_FINAL.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
   <link rel="preload" href="/static/media/revicons.e8746a62.woff" as="font" type="font/woff" crossorigin/>  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="E-commerce for phone cases and technology" />
+  <meta name="description" content="Εμπόριο συσκευών κινητής τηλεφωνίας.Φτιάξε τη θήση σου.Κινητά, tablet, laptop, υπολογιστές, gaming, εικόνα-ήχος, gadgets, αναλώσιμα και είδη γραφείου, προγράμματα και υπηρεσίες, φωτισμός, ιατρικά είδη." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/PNG_FINAL.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -50,6 +50,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript"> //<![CDATA[
+      var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.trust-provider.com/" : "http://www.trustlogo.com/");
+      document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+    //]]></script>
+    <script language="JavaScript" type="text/javascript">
+      TrustLogo("https://www.positivessl.com/images/seals/positivessl_trust_seal_sm_124x32.png", "POSDV", "none");
+    </script>
 </body>
 
 </html>
