--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,11 +11,12 @@
 
     gtag('config', 'G-2E0012DK1M');
   </script>
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' Content Security Policy: https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/  http://www.trustlogo.com  https://www.positivessl.com https://secure.trust-provider.com;"/>
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/  http://www.trustlogo.com  https://www.positivessl.com https://secure.trust-provider.com ;"/>
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://www.googletagmanager.com/gtag/js?id=G-2E0012DK1M  http://www.trustlogo.com https://secure.trust-provider.com/"/>
   <meta charset="utf-8" />
   <link rel="icon" href="/PNG_FINAL.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-  <link rel="preload" href="/static/media/revicons.e8746a62.woff" as="font" type="font/woff" crossorigin/>  
+  <!-- <link rel="preload" href="/static/media/revicons.e8746a62.woff" as="font" type="font/woff" crossorigin/>   -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Εμπόριο συσκευών κινητής τηλεφωνίας.Φτιάξε τη θήση σου.Κινητά, tablet, laptop, υπολογιστές, gaming, εικόνα-ήχος, gadgets, αναλώσιμα και είδη γραφείου, προγράμματα και υπηρεσίες, φωτισμός, ιατρικά είδη." />
