--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     gtag('config', 'G-2E0012DK1M');
   </script>
   <meta http-equiv="Content-Security-Policy"
-    content="img-src 'self' https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/  http://www.trustlogo.com  https://www.positivessl.com https://secure.trust-provider.com ;" />
+    content="img-src 'self' https://hellasphone.gr/ https://www.hellasphone.gr/ https://hellasphone.com.gr/ http://www.hellasphone.com.gr/ https://www.wholesaling.gr/ https://www.isispc-eshop.gr/  http://www.trustlogo.com  https://www.positivessl.com https://secure.trust-provider.com ;" />
   <meta http-equiv="Content-Security-Policy"
     content="script-src 'self' 'unsafe-inline' https://www.googletagmanager.com/gtag/js?id=G-2E0012DK1M  http://www.trustlogo.com https://secure.trust-provider.com/" />
   <meta charset="utf-8" />
@@ -22,7 +22,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Εμπόριο συσκευών κινητής τηλεφωνίας.Φτιάξε τη θήση σου.Κινητά, tablet, laptop, υπολογιστές, gaming, εικόνα-ήχος, gadgets, αναλώσιμα και είδη γραφείου, προγράμματα και υπηρεσίες, φωτισμός, ιατρικά είδη." />
+    content="Εμπόριο συσκευών κινητής τηλεφωνίας.Φτιάξε τη θήκη σου.Κινητά, tablet, laptop, υπολογιστές, gaming, εικόνα-ήχος, gadgets, αναλώσιμα και είδη γραφείου, προγράμματα και υπηρεσίες, φωτισμός, ιατρικά είδη." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/PNG_FINAL.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
